<resources>
    <string name="app_name">CoinbaseMobile</string>

    <string name="redirect_uri">urn:ietf:wg:oauth:2.0:oob</string>
    <string name="base_auth_url">https://www.coinbase.com/oauth/authorize</string>

    <!--    Fragment labels-->
    <string name="nav_label_exchange_rates">ExchangeRates</string>
    <string name="nav_label_profile">ProfileFragment</string>
    <string name="nav_label_chart">ChartFragment</string>
    <string name="nav_label_favorites">FavoritesFragment</string>
    <string name="nav_label_filter">FilterFragment</string>
    <string name="nav_label_settings">SettingsFragment</string>

    <!--    ToolBar titles-->
    <string name="toolbar_title_sign_up">Sign up</string>
    <string name="toolbar_title_profile">Profile</string>
    <string name="toolbar_title_settings">Settings</string>
    <string name="toolbar_title_chart">Chart</string>
    <string name="toolbar_title_filter">Filter</string>
    <string name="toolbar_title_favorites">Favorites</string>
    <string name="toolbar_title_exchange_rate">Exchange rate</string>
    <string name="toolbar_title_sign_up_step_1">Personal information</string>
    <string name="toolbar_title_sign_up_step_2">Address</string>
    <string name="toolbar_title_sign_up_step_3">Authentication params</string>

    <!--    TextField labels-->
    <string name="label_username">Username</string>
    <string name="label_surname">Surname</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_login">Login</string>
    <string name="label_phone_number">Phone</string>
    <string name="label_city">City</string>
    <string name="label_street">Street</string>
    <string name="label_postcode">Postcode</string>
    <string name="label_house_number">House</string>

    <!--    TextView labels-->
    <string name="text_title_splashscreen">coinbase</string>
    <string name="text_title_coinbase">coinbase</string>
    <string name="text_stub_favorites_guest_mode">You must be logged in to be able to save and view data locally</string>
    <string name="text_stub_profile_guest_mode">You must be logged in to access your profile info</string>
    <string name="text_stub_sign_up_start">Create account to access all the features of our application</string>
    <string name="text_stub_sign_up_finish"><b>Congratulations!</b>\nYou have successfully joined our community</string>

    <!--    Button text-->
    <string name="btn_text_sign_in">SignIn</string>
    <string name="btn_text_sign_up">SignUp</string>
    <string name="btn_text_log_out">Log out</string>
    <string name="btn_text_to_sign_in">Go to authorization</string>
    <string name="btn_text_quick_start">Quick start</string>
    <string name="btn_text_create_account">Create account</string>
    <string name="btn_text_next">Next</string>
    <string name="btn_text_complete_registration">Complete registration</string>
    <string name="btn_text_info">Information</string>

    <!--    Menu titles-->
    <string name="title_exchange_rates">Rates</string>
    <string name="title_chart">Chart</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_profile">Profile</string>
    <string name="title_filter">Filter</string>

    <!--    SnackBar text-->
    <string name="snackBar_text_currency_saved">Currency successfully saved</string>
    <string name="snackBar_text_exchange_rate_removed">Exchange rate have removed</string>
    <string name="snackBar_text_undo_remove">Undo</string>

    <!--    SnackBar base buttons-->
    <string name="snackBar_positive_button_ok">OK</string>

    <!--    AlertDialog title-->
    <string name="alert_dialog_title_error">Sorry, Something went wrong</string>
    <string name="alert_dialog_title_add_to_favorite">Add to favorite</string>
    <string name="alert_dialog_title_auth_missing">Auth missing</string>
    <string name="alert_dialog_title_auth_performed">Authorization</string>
    <string name="alert_dialog_title_log_out">Log out</string>

    <!--    AlertDialog default message-->
    <string name="alert_dialog_message_auth_messing">Please, authorize to be able to save data locally</string>
    <string name="alert_dialog_message_auth_performed_reload_profile">Authorization performed successfully!\nReload profile?</string>
    <string name="alert_dialog_message_log_out">Do you want to log out?</string>

    <!--    AlertDialog buttons-->
    <string name="alert_dialog_positive_button_ok">OK</string>
    <string name="alert_dialog_negative_button_cancel">Cancel</string>

    <!--    Toast text-->
    <string name="toast_test_connected_to_webSocket">Connection established</string>

    <!--    Card type-->
    <string name="card_type_settings">Settings</string>

    <!--    Card title-->
    <string name="card_title_open_settings">Open base settings</string>
    <string name="card_title_notification">Notifications</string>
    <string name="card_title_sound">Sounds</string>

    <!--    Bitmex currencies-->
    <string-array name="bitmexCurrencies">
        <item>XBTUSD</item>
        <item>ADAZ20</item>
        <item>BCHUSD</item>
        <item>BNBUSDTZ20</item>
        <item>EOSZ20</item>
        <item>ETHUSD</item>
    </string-array>
</resources>