<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/activity_login_layout"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <View
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:layout_width="match_parent" />

        <TextView
            android:fontFamily="@font/noto_sans_jp_regular"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/text_title_coinbase"
            android:textColor="@color/main_green"
            android:textSize="36sp" />

        <View
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:layout_width="match_parent" />

        <!--    <com.google.android.material.textfield.TextInputLayout-->
        <!--        android:id="@+id/usernameTextField"-->
        <!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:layout_marginStart="32dp"-->
        <!--        android:layout_marginEnd="32dp"-->
        <!--        android:hint="@string/label_username">-->

        <!--        <com.google.android.material.textfield.TextInputEditText-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content" />-->
        <!--    </com.google.android.material.textfield.TextInputLayout>-->

        <!--    <com.google.android.material.textfield.TextInputLayout-->
        <!--        android:id="@+id/passwordTextField"-->
        <!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:layout_marginStart="32dp"-->
        <!--        android:layout_marginTop="16dp"-->
        <!--        android:layout_marginEnd="32dp"-->
        <!--        android:hint="@string/label_password">-->

        <!--        <com.google.android.material.textfield.TextInputEditText-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content" />-->
        <!--    </com.google.android.material.textfield.TextInputLayout>-->

        <!--    <TextView-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:layout_gravity="center_horizontal"-->
        <!--    -->
        <!--        android:gravity="center"-->
        <!--        android:layout_marginStart="16dp"-->
        <!--        android:layout_marginEnd="16dp"-->
        <!--        android:text="You can easily Sign in,\nusing your existing coinbase account"-->
        <!--        android:textColor="@color/black"-->
        <!--        android:textSize="18sp" />-->

        <View
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:layout_width="match_parent" />

        <Button
            android:id="@+id/signInBtn"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:text="@string/btn_text_sign_in"
            android:textAllCaps="false" />

        <Button
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/quickStartBtn"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_width="200dp"
            android:text="@string/btn_text_quick_start"
            android:textAllCaps="false" />

        <Button
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/createAccountBtn"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_width="200dp"
            android:text="@string/btn_text_info"
            android:textAllCaps="false" />

        <View
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:layout_width="match_parent" />
    </LinearLayout>

    <View
        android:id="@+id/shadowView"
        android:layout_width="match_parent"
        android:background="#65A3A3A3"
        android:visibility="gone"
        android:layout_height="match_parent"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="48dp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:indeterminateTint="@color/main_green"
        android:layout_height="48dp"/>
</FrameLayout>